--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
 <canvas></canvas>
 
-<script src="assets/js/index.js"></script>
+<script src="assets/js/index.js" type="module"></script>
 </body>
 </html>
