--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>$Title$</title>
+	<title>Mario Clono</title>
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
